# pyspark-encoders

./: Makefile  README.md  pyproject.toml
docker/: Dockerfile
examples/: development.ipynb  example-1.ipynb
pyspark_encoders/: __init__.py  _catboost.py  _session.py  _target.py
